# WindowsThumbnail

./: CMakeLists.txt  CppShellExtThumbnailHandler.sln  README.md
CppShellExtThumbnailHandler/: CppShellExtThumbnailHandler.vcxproj  CppShellExtThumbnailHandler.vcxproj.filters  RecipeThumbnailProvider.cpp  log.cpp
src/: RecipeThumbnailProvider.h  Reg.cpp  Reg.h  dllmain.cpp  log.h
